[package]
name = "opcua-server-multiclient"
version = "0.1.0"
edition = "2021"
default-run = "opcua-server-multiclient"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opcua = "0.11.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[[bin]]
name = "client"
path = "src/client.rs"
